Change deprecated URI creation
EMC-121