@@ -29,7 +29,7 @@ import uk.ac.ceh.gateway.catalogue.model.Supplemental;
 import uk.ac.ceh.gateway.catalogue.repository.DocumentRepository;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -405,7 +405,7 @@ public class B2shareImportService implements CatalogueImportService {
         String b2shareRecordsnextPageUrl = b2shareRecordsFirstPageUrl;
         while (!b2shareRecordsnextPageUrl.isEmpty()) {
             // get next page of records
-            b2shareRecordsPage = objectMapper.readTree(new URL(b2shareRecordsnextPageUrl));
+            b2shareRecordsPage = objectMapper.readTree(new URI(b2shareRecordsnextPageUrl).toURL());
 
             for (JsonNode record : b2shareRecordsPage.path("hits").path("hits")){
                 // process each record on page
